--- a/WPFSipBiteUnite/AllBeersPage.xaml
+++ b/WPFSipBiteUnite/AllBeersPage.xaml
@@ -25,7 +25,7 @@
                     </Style>
                 </ToggleButton.Resources>
             </ToggleButton>
-            <ToggleButton Style="{StaticResource NavItemStyle}" Margin="0,400,0,0" Checked="ProfileButton_Checked" Name="ProfileButton" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+            <ToggleButton Style="{StaticResource NavItemStyle}" Margin="0,420,0,0" Checked="ProfileButton_Checked" Name="ProfileButton" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                 <TextBlock Text="Профіль"/>
                 <ToggleButton.Resources>
                     <Style TargetType="Border">
@@ -34,5 +34,18 @@
                 </ToggleButton.Resources>
             </ToggleButton>
         </StackPanel>
+        
+        <!-- <ContentControl Style="{StaticResource SmallBeerCardStyle}" DataContext="{Binding SmallBeerViewModel}"> -->
+        <!--     <TextBlock Text="Страви"/> -->
+        <!--     <ContentControl.Resources> -->
+        <!--         <Style TargetType="Border"> -->
+        <!--             <Setter Property="CornerRadius" Value="6"/> -->
+        <!--         </Style> -->
+        <!--     </ContentControl.Resources> -->
+        <!-- </ContentControl> -->
+        
+        
+        <local:CustomCardSmall/>
+        
     </Grid>
 </Page>
