--- a/WPFSipBiteUnite/CustomButtons.xaml
+++ b/WPFSipBiteUnite/CustomButtons.xaml
@@ -7,21 +7,40 @@
     <!-- Стилі для кнопок -->
     <Style x:Key="PrimaryButton" TargetType="Button">
         <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="{StaticResource NeutralWhiteBrush}"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="BorderBrush" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="Height" Value="44"/>
         <Setter Property="Padding" Value="12,0"/>
+        <Setter Property="FontFamily" Value="Montserrat"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Medium"/>
 
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{StaticResource PrimaryHoverBrush}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style x:Key="SecondaryButton" TargetType="Button">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
+        <Setter Property="Background" Value="{StaticResource Neutral900Brush}"/>
+        <Setter Property="Foreground" Value="{StaticResource PrimaryHoverBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Height" Value="44"/>
         <Setter Property="Padding" Value="12,0"/>
+        <Setter Property="FontFamily" Value="Montserrat"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{StaticResource Neutral700Brush}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
+    
     <Style x:Key="Border" TargetType="Button" BasedOn="{StaticResource PrimaryButton}">
         <Setter Property="Border.CornerRadius" Value="6"/>
     </Style>
