--- a/WPFSipBiteUnite/App.xaml
+++ b/WPFSipBiteUnite/App.xaml
@@ -2,14 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFSipBiteUnite"
-             StartupUri="RegisterView.xaml">
+             StartupUri="ProfileView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="colors.xaml" />
+                <ResourceDictionary Source="UIColors.xaml" />
                 <ResourceDictionary Source="CustomButtons.xaml" />
                 <ResourceDictionary Source="CustomInput.xaml" />
-                <ResourceDictionary Source="CustomNavigation.xaml" />
+                <ResourceDictionary Source="CustomNavButtons.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
