--- a/WPFSipBiteUnite/UIColors.xaml
+++ b/WPFSipBiteUnite/UIColors.xaml
@@ -2,9 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Colors -->
     <Color x:Key="NeutralBlack">#000000</Color>
-    <Color x:Key="Neutral900">#1a1a1d</Color>
+    <Color x:Key="Neutral900">#0F0F0F</Color>
+    <Color x:Key="Neutral800">#1d1d1f</Color>
     <Color x:Key="Neutral700">#4B4B4B</Color>
-    <Color x:Key="Neutral400">#E1E2E5</Color>
+    <Color x:Key="Neutral400">#D4D5D6</Color>
     <Color x:Key="Neutral300">#F0F1F2</Color>
     <Color x:Key="NeutralWhite">#FFFFFF</Color>
     <Color x:Key="Primary">#656BFF</Color>
@@ -14,6 +15,7 @@
     <!-- Brushes -->
     <SolidColorBrush x:Key="NeutralBlackBrush" Color="{StaticResource NeutralBlack}" />
     <SolidColorBrush x:Key="Neutral900Brush" Color="{StaticResource Neutral900}" />
+    <SolidColorBrush x:Key="Neutral800Brush" Color="{StaticResource Neutral800}" />
     <SolidColorBrush x:Key="Neutral700Brush" Color="{StaticResource Neutral700}" />
     <SolidColorBrush x:Key="Neutral400Brush" Color="{StaticResource Neutral400}" />
     <SolidColorBrush x:Key="Neutral300Brush" Color="{StaticResource Neutral300}" />
