--- a/WPFSipBiteUnite/LoginView.xaml
+++ b/WPFSipBiteUnite/LoginView.xaml
@@ -35,10 +35,12 @@
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="56"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
+            <Grid Grid.Row="0"
+                  VerticalAlignment="Top"
+                  Margin="0, 8, 0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition Width="25"/>
@@ -52,7 +54,7 @@
                             FontWeight="Medium"
                             Grid.Column="0"
                             VerticalAlignment="Center"
-                            Margin="10,0,0,0"/>
+                            Margin="12,0,0,0"/>
                 
                 <Button x:Name="btnClose"                          
                         BorderThickness="0"
@@ -65,18 +67,18 @@
                         Click="btnClose_Click">
                     <Button.Style>
                         <Style TargetType="Button">
-                            <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
+                            <Setter Property="Background" Value="{StaticResource Neutral700Brush}"/>
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="{StaticResource PrimaryHoverBrush}"/>
+                                    <Setter Property="Background" Value="{StaticResource Neutral800Brush}"/>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
                     </Button.Style>
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
-                            <Border Width="18" Height="18"
-                                    CornerRadius="9"
+                            <Border Width="20" Height="20"
+                                    CornerRadius="10"
                                     Background="{TemplateBinding Background}">
                                 <ContentPresenter VerticalAlignment="Center"
                                                     HorizontalAlignment="Center"/>
@@ -88,7 +90,7 @@
             <StackPanel Width="380"
                         Grid.Row="1"
                         Orientation="Vertical"
-                        Margin="0,56,0,0">
+                        Margin="0,12,0,0">
                 <TextBlock Text="Вхід"
                             Foreground="{StaticResource NeutralWhiteBrush}"
                             FontSize="28"
