--- a/WPFSipBiteUnite/RegisterView.xaml
+++ b/WPFSipBiteUnite/RegisterView.xaml
@@ -51,10 +51,12 @@
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="56"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
+            <Grid Grid.Row="0"
+                  VerticalAlignment="Top"
+                  Margin="0, 8, 0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition Width="25"/>
@@ -81,18 +83,18 @@
                         Click="btnClose_Click">
                     <Button.Style>
                         <Style TargetType="Button">
-                            <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
+                            <Setter Property="Background" Value="{StaticResource Neutral700Brush}"/>
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="{StaticResource PrimaryHoverBrush}"/>
+                                    <Setter Property="Background" Value="{StaticResource Neutral800Brush}"/>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
                     </Button.Style>
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
-                            <Border Width="18" Height="18"
-                                    CornerRadius="9"
+                            <Border Width="20" Height="20"
+                                    CornerRadius="10"
                                     Background="{TemplateBinding Background}">
                                 <ContentPresenter VerticalAlignment="Center"
                                                     HorizontalAlignment="Center"/>
@@ -104,7 +106,7 @@
             <StackPanel Width="380"
                         Grid.Row="1"
                         Orientation="Vertical"
-                        Margin="0,56,0,0">
+                        Margin="0,12,0,0">
                 <TextBlock Text="Реєстрація"
                             Foreground="{StaticResource NeutralWhiteBrush}"
                             FontSize="28"
