--- a/WPFSipBiteUnite/LoginView.xaml
+++ b/WPFSipBiteUnite/LoginView.xaml
@@ -160,6 +160,7 @@
                         Content="Увійти"
                         Margin="0,48,0,0"
                         Cursor="Hand"
+                        Click="btnLogin_Click"
                         Height="44"
                         FontFamily="Montserrat"
                         FontSize="16"
