--- a/WPFSipBiteUnite/DishesExploreView.xaml
+++ b/WPFSipBiteUnite/DishesExploreView.xaml
@@ -6,25 +6,49 @@
              xmlns:local="clr-namespace:WPFSipBiteUnite"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="572">
-    <Grid>
-        <!-- StackPanel for organization -->
-        <StackPanel>
-            <TextBlock Text="Explore dishes"
-                       FontSize="50"
-                       Foreground="{StaticResource Neutral300Brush}"/>
+    <ScrollViewer VerticalScrollBarVisibility="Hidden">
+        <Grid>
+            <!-- StackPanel for organization -->
+            <StackPanel>
+                <!-- ItemsControl to display dishes -->
+                <ItemsControl ItemsSource="{Binding Dishes}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <!-- Use WrapPanel to organize items in rows -->
+                            <WrapPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
 
-            <!-- ItemsControl to display dishes -->
-            <ItemsControl ItemsSource="{Binding Dishes}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <!-- Customize the appearance of each dish item -->
-                        <Border BorderBrush="White" BorderThickness="1" Margin="5">
-                            <!-- Assuming Dish has a property named DishName -->
-                            <TextBlock Text="{Binding FoodName}" FontSize="16" Foreground="White" />
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </StackPanel>
-    </Grid>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <!-- Customize the appearance of each dish item with a rounded border and padding -->
+                            <Border Background="#1D1D1F" Margin="5" CornerRadius="10" Padding="10" Width="270">
+                                <StackPanel>
+                                    <Image Source="{Binding FoodPhotoURL}" Width="150" Height="200" />
+                                    <TextBlock Text="{Binding FoodName}" FontSize="20" FontWeight="Bold" FontFamily="Montserrat" Foreground="White" Margin="0,5,0,0" HorizontalAlignment="Center"/>
+
+                                    <Button Content="Order" Height="44" Margin="0,10,0,0" 
+                                        Background="{StaticResource PrimaryBrush}" 
+                                        FontFamily="Montserrat" 
+                                        FontSize="18" 
+                                        FontWeight="Medium" 
+                                        Foreground="{StaticResource NeutralWhiteBrush}">
+                                        <Button.Template>
+                                            <ControlTemplate TargetType="Button">
+                                                <Border CornerRadius="6"
+                                                    Background="{TemplateBinding Background}">
+                                                    <ContentPresenter VerticalAlignment="Center"
+                                                                  HorizontalAlignment="Center" />
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Button.Template>
+                                    </Button>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
